# prelegal

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  PLAN.md  README.md  catalog.json  docker-compose.yml  railway.toml
backend/: main.py  pyproject.toml
backend/tests/: test_api.py  test_models.py
frontend/: next.config.ts  package-lock.json  package.json
frontend/src/__tests__/: document.test.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/forgot-password/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/reset-password/: page.tsx
frontend/src/app/signup/: page.tsx
frontend/src/components/: document-catalog-panel.tsx  document-chat.tsx  generic-document-pdf.tsx  generic-document-preview.tsx  my-documents-sidebar.tsx  nda-chat.tsx  nda-form.tsx  nda-pdf-document.tsx  nda-preview.tsx
frontend/src/contexts/: auth-context.tsx
frontend/src/lib/: api.ts  nda-template.ts
frontend/src/types/: document.ts  nda.ts
scripts/: start-mac.sh  start-windows.ps1  stop-mac.sh  stop-windows.ps1
templates/: LICENSE.txt
